idyl.output
State 48 conflicts: 1 shift/reduce
State 50 conflicts: 1 shift/reduce
State 54 conflicts: 1 shift/reduce
State 57 conflicts: 2 shift/reduce
State 83 conflicts: 1 shift/reduce
State 126 conflicts: 1 shift/reduce
State 141 conflicts: 2 shift/reduce
State 161 conflicts: 1 shift/reduce
State 180 conflicts: 1 shift/reduce
State 222 conflicts: 1 shift/reduce
State 225 conflicts: 1 shift/reduce
State 230 conflicts: 2 shift/reduce
State 257 conflicts: 1 shift/reduce
State 279 conflicts: 1 shift/reduce
State 341 conflicts: 1 shift/reduce
State 344 conflicts: 1 reduce/reduce
State 345 conflicts: 1 reduce/reduce
State 346 conflicts: 1 reduce/reduce
State 353 conflicts: 1 reduce/reduce
State 356 conflicts: 1 reduce/reduce


Grammar

    0 $accept: program YYEOF

    1 program: top_level_statements
    2        | ε

    3 top_level_statements: top_level_statements top_level_statement
    4                     | top_level_statement

    5 top_level_statement: function_or_flow_definition
    6                    | process_block
    7                    | IMPORT LPAREN STRING_LITERAL RPAREN
    8                    | IDENTIFIER ASSIGN IMPORT LPAREN STRING_LITERAL RPAREN
    9                    | MODULE LPAREN STRING_LITERAL RPAREN
   10                    | IDENTIFIER ASSIGN MODULE LPAREN STRING_LITERAL RPAREN

   11 function_or_flow_definition: function_definition
   12                            | flow_definition

   13 function_definition: IDENTIFIER LPAREN parameter_list RPAREN ASSIGN expression
   14                    | IDENTIFIER LPAREN RPAREN ASSIGN expression
   15                    | IDENTIFIER LPAREN parameter_list RPAREN ASSIGN expression lambda_block
   16                    | IDENTIFIER LPAREN RPAREN ASSIGN expression lambda_block
   17                    | IDENTIFIER ASSIGN expression
   18                    | IDENTIFIER ASSIGN expression lambda_block

   19 flow_definition: FLOW IDENTIFIER ASSIGN flow_literal
   20                | FLOW IDENTIFIER LPAREN parameter_list RPAREN ASSIGN flow_literal
   21                | FLOW IDENTIFIER ASSIGN LBRACE flow_members RBRACE
   22                | FLOW IDENTIFIER LPAREN parameter_list RPAREN ASSIGN LBRACE flow_members RBRACE

   23 flow_members: flow_members IDENTIFIER COLON flow_literal
   24             | flow_members IDENTIFIER ON IDENTIFIER COLON flow_literal
   25             | IDENTIFIER COLON flow_literal
   26             | IDENTIFIER ON IDENTIFIER COLON flow_literal

   27 flow_literal: LBRACKET flow_elements RBRACKET
   28             | generator_expression

   29 flow_elements: flow_elements COMMA expression
   30              | flow_elements COMMA LBRACKET NUMBER RBRACKET
   31              | flow_elements COMMA RESTART_MARKER
   32              | expression

   33 generator_expression: LBRACKET IDENTIFIER ASSIGN expression RANGE expression COLON expression RBRACKET

   34 process_block: PROCESS COLON LBRACE process_body_statements RBRACE
   35              | PROCESS IDENTIFIER COMMA DUR ASSIGN expression COLON LBRACE process_body_statements RBRACE
   36              | PROCESS IDENTIFIER COLON LBRACE process_body_statements RBRACE

   37 process_body_statements: process_body_statements process_body_statement
   38                        | process_body_statement

   39 process_body_statement: postfix_expression ASSIGN expression
   40                       | IDENTIFIER ASSIGN expression
   41                       | EMIT IDENTIFIER ASSIGN expression
   42                       | stop_statement
   43                       | start_statement
   44                       | catch_block
   45                       | at_block
   46                       | on_block
   47                       | each_block
   48                       | expression

   49 at_block: AT_OP LPAREN expression RPAREN COLON LBRACE process_body_statements RBRACE

   50 on_block: ON expression COLON LBRACE process_body_statements RBRACE

   51 each_dt_opt: ε
   52            | COMMA DT ASSIGN expression
   53            | COMMA expression

   54 each_body: LBRACE process_body_statements RBRACE
   55          | expression

   56 each_block: EACH IDENTIFIER IN expression each_dt_opt COLON each_body
   57           | EACH IDENTIFIER IN expression RANGE expression each_dt_opt COLON each_body
   58           | EACH IDENTIFIER IN expression RANGE expression RANGE expression each_dt_opt COLON each_body

   59 stop_statement: STOP IDENTIFIER

   60 start_statement: START IDENTIFIER

   61 catch_block: CATCH postfix_expression NAMESPACE_DOT IDENTIFIER COLON LBRACE process_body_statements RBRACE
   62            | CATCH postfix_expression NAMESPACE_DOT END COLON LBRACE process_body_statements RBRACE

   63 lambda_block: LAMBDA_BLOCK LBRACE init_block lambda_statements RBRACE
   64             | LAMBDA_BLOCK LBRACE init_block RBRACE
   65             | LAMBDA_BLOCK LBRACE lambda_statements RBRACE

   66 init_block: INIT COLON LBRACE lambda_statements RBRACE

   67 lambda_statements: lambda_statements lambda_statement
   68                  | lambda_statement

   69 lambda_statement: postfix_expression ASSIGN expression
   70                 | IDENTIFIER ASSIGN expression
   71                 | EMIT IDENTIFIER ASSIGN expression
   72                 | DT ASSIGN expression
   73                 | expression

   74 block_body: block_body SEMICOLON block_body_statement
   75           | block_body_statement
   76           | ε

   77 block_body_statement: IDENTIFIER ASSIGN expression
   78                     | EMIT IDENTIFIER ASSIGN expression
   79                     | stop_statement
   80                     | start_statement
   81                     | expression

   82 parameter_list: parameter_list COMMA parameter
   83               | parameter

   84 parameter: IDENTIFIER
   85          | IDENTIFIER TRIGGER
   86          | IDENTIFIER ASSIGN expression
   87          | DT ASSIGN expression

   88 expression: assignment_expression

   89 assignment_expression: ternary_expression

   90 ternary_expression: logical_or_expression
   91                   | logical_or_expression QUESTION ternary_options

   92 ternary_options: ternary_options SEMICOLON logical_or_expression
   93                | logical_or_expression

   94 logical_or_expression: logical_and_expression
   95                      | logical_or_expression OR logical_and_expression

   96 logical_and_expression: bitwise_or_expression
   97                       | logical_and_expression AND bitwise_or_expression

   98 bitwise_or_expression: bitwise_xor_expression
   99                      | bitwise_or_expression OR bitwise_xor_expression

  100 bitwise_xor_expression: bitwise_and_expression
  101                       | bitwise_xor_expression XOR bitwise_and_expression

  102 bitwise_and_expression: equality_expression
  103                       | bitwise_and_expression AND equality_expression

  104 equality_expression: relational_expression
  105                    | equality_expression EQ relational_expression
  106                    | equality_expression NEQ relational_expression

  107 relational_expression: shift_expression
  108                      | relational_expression LT shift_expression
  109                      | relational_expression GT shift_expression
  110                      | relational_expression LE shift_expression
  111                      | relational_expression GE shift_expression

  112 shift_expression: additive_expression
  113                 | shift_expression LSHIFT additive_expression
  114                 | shift_expression RSHIFT additive_expression

  115 additive_expression: multiplicative_expression
  116                    | additive_expression PLUS multiplicative_expression
  117                    | additive_expression MINUS multiplicative_expression

  118 multiplicative_expression: unary_expression
  119                          | multiplicative_expression MUL unary_expression
  120                          | multiplicative_expression DIV unary_expression
  121                          | multiplicative_expression MOD unary_expression

  122 unary_expression: postfix_expression
  123                 | NOT unary_expression
  124                 | MINUS unary_expression
  125                 | MEMORY_OP LPAREN expression RPAREN
  126                 | MEMORY_OP LPAREN expression COMMA expression RPAREN

  127 postfix_expression: primary_expression
  128                   | postfix_expression LPAREN argument_list RPAREN
  129                   | postfix_expression LPAREN RPAREN
  130                   | postfix_expression DOT IDENTIFIER
  131                   | postfix_expression NAMESPACE_DOT IDENTIFIER
  132                   | postfix_expression NAMESPACE_DOT IDENTIFIER LPAREN argument_list RPAREN
  133                   | postfix_expression NAMESPACE_DOT IDENTIFIER LPAREN RPAREN
  134                   | postfix_expression LBRACKET expression RBRACKET

  135 primary_expression: IDENTIFIER
  136                   | NUMBER
  137                   | TIME_LITERAL
  138                   | TRIGGER
  139                   | REST
  140                   | DT
  141                   | DUR
  142                   | AGE
  143                   | STRING_LITERAL
  144                   | LPAREN expression RPAREN
  145                   | flow_literal
  146                   | FLOW LBRACE flow_members RBRACE
  147                   | STOP
  148                   | LBRACE block_body RBRACE

  149 argument_list: argument_list COMMA argument
  150              | argument

  151 argument: expression
  152         | IDENTIFIER ASSIGN expression
  153         | DT ASSIGN expression


Terminals, with rules where they appear

    YYEOF (0) 0
    error (256)
    IDENTIFIER <std::string> (258) 8 10 13 14 15 16 17 18 19 20 21 22 23 24 25 26 33 35 36 40 41 56 57 58 59 60 61 70 71 77 78 84 85 86 130 131 132 133 135 152
    NUMBER <std::string> (259) 30 136
    TIME_LITERAL <std::string> (260) 137
    STRING_LITERAL <std::string> (261) 7 8 9 10 143
    FLOW (262) 19 20 21 22 146
    PROCESS (263) 34 35 36
    IMPORT (264) 7 8
    MODULE (265) 9 10
    INIT (266) 66
    EMIT (267) 41 71 78
    CATCH (268) 61 62
    END (269) 62
    DT (270) 52 72 87 140 153
    DUR (271) 35 141
    STOP (272) 59 147
    START (273) 60
    AGE (274) 142
    LAMBDA_BLOCK (275) 63 64 65
    NAMESPACE_DOT (276) 61 62 131 132 133
    RESTART_MARKER (277) 31
    MEMORY_OP (278) 125 126
    RANGE (279) 33 57 58
    REST (280) 139
    AT_OP (281) 49
    PLUS (282) 116
    MINUS (283) 117 124
    MUL (284) 119
    DIV (285) 120
    MOD (286) 121
    EQ (287) 105
    NEQ (288) 106
    LT (289) 108
    GT (290) 109
    LE (291) 110
    GE (292) 111
    AND (293) 97 103
    OR (294) 95 99
    XOR (295) 101
    NOT (296) 123
    LSHIFT (297) 113
    RSHIFT (298) 114
    QUESTION (299) 91
    ASSIGN (300) 8 10 13 14 15 16 17 18 19 20 21 22 33 35 39 40 41 52 69 70 71 72 77 78 86 87 152 153
    COLON (301) 23 24 25 26 33 34 35 36 49 50 56 57 58 61 62 66
    SEMICOLON (302) 74 92
    COMMA (303) 29 30 31 35 52 53 82 126 149
    DOT (304) 130
    TRIGGER (305) 85 138
    LPAREN (306) 7 8 9 10 13 14 15 16 20 22 49 125 126 128 129 132 133 144
    RPAREN (307) 7 8 9 10 13 14 15 16 20 22 49 125 126 128 129 132 133 144
    LBRACKET (308) 27 30 33 134
    RBRACKET (309) 27 30 33 134
    LBRACE (310) 21 22 34 35 36 49 50 54 61 62 63 64 65 66 146 148
    RBRACE (311) 21 22 34 35 36 49 50 54 61 62 63 64 65 66 146 148
    ON (312) 24 26 50
    EACH (313) 56 57 58
    IN (314) 56 57 58


Nonterminals, with rules where they appear

    $accept (60)
        on left: 0
    program <idyl::parser::node_ptr> (61)
        on left: 1 2
        on right: 0
    top_level_statements <std::vector<idyl::parser::stmt_ptr>> (62)
        on left: 3 4
        on right: 1 3
    top_level_statement <idyl::parser::stmt_ptr> (63)
        on left: 5 6 7 8 9 10
        on right: 3 4
    function_or_flow_definition <idyl::parser::stmt_ptr> (64)
        on left: 11 12
        on right: 5
    function_definition <std::shared_ptr<idyl::parser::function_definition>> (65)
        on left: 13 14 15 16 17 18
        on right: 11
    flow_definition <std::shared_ptr<idyl::parser::flow_definition>> (66)
        on left: 19 20 21 22
        on right: 12
    flow_members <std::vector<std::shared_ptr<idyl::parser::flow_member>>> (67)
        on left: 23 24 25 26
        on right: 21 22 23 24 146
    flow_literal <idyl::parser::expr_ptr> (68)
        on left: 27 28
        on right: 19 20 23 24 25 26 145
    flow_elements <std::vector<idyl::parser::expr_ptr>> (69)
        on left: 29 30 31 32
        on right: 27 29 30 31
    generator_expression <idyl::parser::expr_ptr> (70)
        on left: 33
        on right: 28
    process_block <std::shared_ptr<idyl::parser::process_block>> (71)
        on left: 34 35 36
        on right: 6
    process_body_statements <std::vector<idyl::parser::stmt_ptr>> (72)
        on left: 37 38
        on right: 34 35 36 37 49 50 54 61 62
    process_body_statement <idyl::parser::stmt_ptr> (73)
        on left: 39 40 41 42 43 44 45 46 47 48
        on right: 37 38
    at_block <std::shared_ptr<idyl::parser::at_block>> (74)
        on left: 49
        on right: 45
    on_block <std::shared_ptr<idyl::parser::on_block>> (75)
        on left: 50
        on right: 46
    each_dt_opt <idyl::parser::expr_ptr> (76)
        on left: 51 52 53
        on right: 56 57 58
    each_body <std::vector<idyl::parser::stmt_ptr>> (77)
        on left: 54 55
        on right: 56 57 58
    each_block <std::shared_ptr<idyl::parser::each_block>> (78)
        on left: 56 57 58
        on right: 47
    stop_statement <std::shared_ptr<idyl::parser::stop_statement>> (79)
        on left: 59
        on right: 42 79
    start_statement <std::shared_ptr<idyl::parser::start_statement>> (80)
        on left: 60
        on right: 43 80
    catch_block <std::shared_ptr<idyl::parser::catch_block>> (81)
        on left: 61 62
        on right: 44
    lambda_block <std::shared_ptr<idyl::parser::lambda_block>> (82)
        on left: 63 64 65
        on right: 15 16 18
    init_block <std::shared_ptr<idyl::parser::init_block>> (83)
        on left: 66
        on right: 63 64
    lambda_statements <std::vector<idyl::parser::stmt_ptr>> (84)
        on left: 67 68
        on right: 63 65 66 67
    lambda_statement <idyl::parser::stmt_ptr> (85)
        on left: 69 70 71 72 73
        on right: 67 68
    block_body <std::vector<idyl::parser::stmt_ptr>> (86)
        on left: 74 75 76
        on right: 74 148
    block_body_statement <idyl::parser::stmt_ptr> (87)
        on left: 77 78 79 80 81
        on right: 74 75
    parameter_list <std::vector<idyl::parser::param_ptr>> (88)
        on left: 82 83
        on right: 13 15 20 22 82
    parameter <idyl::parser::param_ptr> (89)
        on left: 84 85 86 87
        on right: 82 83
    expression <idyl::parser::expr_ptr> (90)
        on left: 88
        on right: 13 14 15 16 17 18 29 32 33 35 39 40 41 48 49 50 52 53 55 56 57 58 69 70 71 72 73 77 78 81 86 87 125 126 134 144 151 152 153
    assignment_expression <idyl::parser::expr_ptr> (91)
        on left: 89
        on right: 88
    ternary_expression <idyl::parser::expr_ptr> (92)
        on left: 90 91
        on right: 89
    ternary_options <std::vector<idyl::parser::expr_ptr>> (93)
        on left: 92 93
        on right: 91 92
    logical_or_expression <idyl::parser::expr_ptr> (94)
        on left: 94 95
        on right: 90 91 92 93 95
    logical_and_expression <idyl::parser::expr_ptr> (95)
        on left: 96 97
        on right: 94 95 97
    bitwise_or_expression <idyl::parser::expr_ptr> (96)
        on left: 98 99
        on right: 96 97 99
    bitwise_xor_expression <idyl::parser::expr_ptr> (97)
        on left: 100 101
        on right: 98 99 101
    bitwise_and_expression <idyl::parser::expr_ptr> (98)
        on left: 102 103
        on right: 100 101 103
    equality_expression <idyl::parser::expr_ptr> (99)
        on left: 104 105 106
        on right: 102 103 105 106
    relational_expression <idyl::parser::expr_ptr> (100)
        on left: 107 108 109 110 111
        on right: 104 105 106 108 109 110 111
    shift_expression <idyl::parser::expr_ptr> (101)
        on left: 112 113 114
        on right: 107 108 109 110 111 113 114
    additive_expression <idyl::parser::expr_ptr> (102)
        on left: 115 116 117
        on right: 112 113 114 116 117
    multiplicative_expression <idyl::parser::expr_ptr> (103)
        on left: 118 119 120 121
        on right: 115 116 117 119 120 121
    unary_expression <idyl::parser::expr_ptr> (104)
        on left: 122 123 124 125 126
        on right: 118 119 120 121 123 124
    postfix_expression <idyl::parser::expr_ptr> (105)
        on left: 127 128 129 130 131 132 133 134
        on right: 39 61 62 69 122 128 129 130 131 132 133 134
    primary_expression <idyl::parser::expr_ptr> (106)
        on left: 135 136 137 138 139 140 141 142 143 144 145 146 147 148
        on right: 127
    argument_list <std::vector<std::shared_ptr<idyl::parser::argument>>> (107)
        on left: 149 150
        on right: 128 132 149
    argument <std::shared_ptr<idyl::parser::argument>> (108)
        on left: 151 152 153
        on right: 149 150


State 0

    0 $accept: • program YYEOF
    1 program: • top_level_statements
    2        | ε •  [YYEOF]
    3 top_level_statements: • top_level_statements top_level_statement
    4                     | • top_level_statement
    5 top_level_statement: • function_or_flow_definition
    6                    | • process_block
    7                    | • IMPORT LPAREN STRING_LITERAL RPAREN
    8                    | • IDENTIFIER ASSIGN IMPORT LPAREN STRING_LITERAL RPAREN
    9                    | • MODULE LPAREN STRING_LITERAL RPAREN
   10                    | • IDENTIFIER ASSIGN MODULE LPAREN STRING_LITERAL RPAREN
   11 function_or_flow_definition: • function_definition
   12                            | • flow_definition
   13 function_definition: • IDENTIFIER LPAREN parameter_list RPAREN ASSIGN expression
   14                    | • IDENTIFIER LPAREN RPAREN ASSIGN expression
   15                    | • IDENTIFIER LPAREN parameter_list RPAREN ASSIGN expression lambda_block
   16                    | • IDENTIFIER LPAREN RPAREN ASSIGN expression lambda_block
   17                    | • IDENTIFIER ASSIGN expression
   18                    | • IDENTIFIER ASSIGN expression lambda_block
   19 flow_definition: • FLOW IDENTIFIER ASSIGN flow_literal
   20                | • FLOW IDENTIFIER LPAREN parameter_list RPAREN ASSIGN flow_literal
   21                | • FLOW IDENTIFIER ASSIGN LBRACE flow_members RBRACE
   22                | • FLOW IDENTIFIER LPAREN parameter_list RPAREN ASSIGN LBRACE flow_members RBRACE
   34 process_block: • PROCESS COLON LBRACE process_body_statements RBRACE
   35              | • PROCESS IDENTIFIER COMMA DUR ASSIGN expression COLON LBRACE process_body_statements RBRACE
   36              | • PROCESS IDENTIFIER COLON LBRACE process_body_statements RBRACE

    IDENTIFIER  shift, and go to state 1
    FLOW        shift, and go to state 2
    PROCESS     shift, and go to state 3
    IMPORT      shift, and go to state 4
    MODULE      shift, and go to state 5

    $default  reduce using rule 2 (program)

    program                      go to state 6
    top_level_statements         go to state 7
    top_level_statement          go to state 8
    function_or_flow_definition  go to state 9
    function_definition          go to state 10
    flow_definition              go to state 11
    process_block                go to state 12


State 1

    8 top_level_statement: IDENTIFIER • ASSIGN IMPORT LPAREN STRING_LITERAL RPAREN
   10                    | IDENTIFIER • ASSIGN MODULE LPAREN STRING_LITERAL RPAREN
   13 function_definition: IDENTIFIER • LPAREN parameter_list RPAREN ASSIGN expression
   14                    | IDENTIFIER • LPAREN RPAREN ASSIGN expression
   15                    | IDENTIFIER • LPAREN parameter_list RPAREN ASSIGN expression lambda_block
   16                    | IDENTIFIER • LPAREN RPAREN ASSIGN expression lambda_block
   17                    | IDENTIFIER • ASSIGN expression
   18                    | IDENTIFIER • ASSIGN expression lambda_block

    ASSIGN  shift, and go to state 13
    LPAREN  shift, and go to state 14


State 2

   19 flow_definition: FLOW • IDENTIFIER ASSIGN flow_literal
   20                | FLOW • IDENTIFIER LPAREN parameter_list RPAREN ASSIGN flow_literal
   21                | FLOW • IDENTIFIER ASSIGN LBRACE flow_members RBRACE
   22                | FLOW • IDENTIFIER LPAREN parameter_list RPAREN ASSIGN LBRACE flow_members RBRACE

    IDENTIFIER  shift, and go to state 15


State 3

   34 process_block: PROCESS • COLON LBRACE process_body_statements RBRACE
   35              | PROCESS • IDENTIFIER COMMA DUR ASSIGN expression COLON LBRACE process_body_statements RBRACE
   36              | PROCESS • IDENTIFIER COLON LBRACE process_body_statements RBRACE

    IDENTIFIER  shift, and go to state 16
    COLON       shift, and go to state 17


State 4

    7 top_level_statement: IMPORT • LPAREN STRING_LITERAL RPAREN

    LPAREN  shift, and go to state 18


State 5

    9 top_level_statement: MODULE • LPAREN STRING_LITERAL RPAREN

    LPAREN  shift, and go to state 19


State 6

    0 $accept: program • YYEOF

    YYEOF  shift, and go to state 20


State 7

    1 program: top_level_statements •  [YYEOF]
    3 top_level_statements: top_level_statements • top_level_statement
    5 top_level_statement: • function_or_flow_definition
    6                    | • process_block
    7                    | • IMPORT LPAREN STRING_LITERAL RPAREN
    8                    | • IDENTIFIER ASSIGN IMPORT LPAREN STRING_LITERAL RPAREN
    9                    | • MODULE LPAREN STRING_LITERAL RPAREN
   10                    | • IDENTIFIER ASSIGN MODULE LPAREN STRING_LITERAL RPAREN
   11 function_or_flow_definition: • function_definition
   12                            | • flow_definition
   13 function_definition: • IDENTIFIER LPAREN parameter_list RPAREN ASSIGN expression
   14                    | • IDENTIFIER LPAREN RPAREN ASSIGN expression
   15                    | • IDENTIFIER LPAREN parameter_list RPAREN ASSIGN expression lambda_block
   16                    | • IDENTIFIER LPAREN RPAREN ASSIGN expression lambda_block
   17                    | • IDENTIFIER ASSIGN expression
   18                    | • IDENTIFIER ASSIGN expression lambda_block
   19 flow_definition: • FLOW IDENTIFIER ASSIGN flow_literal
   20                | • FLOW IDENTIFIER LPAREN parameter_list RPAREN ASSIGN flow_literal
   21                | • FLOW IDENTIFIER ASSIGN LBRACE flow_members RBRACE
   22                | • FLOW IDENTIFIER LPAREN parameter_list RPAREN ASSIGN LBRACE flow_members RBRACE
   34 process_block: • PROCESS COLON LBRACE process_body_statements RBRACE
   35              | • PROCESS IDENTIFIER COMMA DUR ASSIGN expression COLON LBRACE process_body_statements RBRACE
   36              | • PROCESS IDENTIFIER COLON LBRACE process_body_statements RBRACE

    IDENTIFIER  shift, and go to state 1
    FLOW        shift, and go to state 2
    PROCESS     shift, and go to state 3
    IMPORT      shift, and go to state 4
    MODULE      shift, and go to state 5

    $default  reduce using rule 1 (program)

    top_level_statement          go to state 21
    function_or_flow_definition  go to state 9
    function_definition          go to state 10
    flow_definition              go to state 11
    process_block                go to state 12


State 8

    4 top_level_statements: top_level_statement •

    $default  reduce using rule 4 (top_level_statements)


State 9

    5 top_level_statement: function_or_flow_definition •

    $default  reduce using rule 5 (top_level_statement)


State 10

   11 function_or_flow_definition: function_definition •

    $default  reduce using rule 11 (function_or_flow_definition)


State 11

   12 function_or_flow_definition: flow_definition •

    $default  reduce using rule 12 (function_or_flow_definition)


State 12

    6 top_level_statement: process_block •

    $default  reduce using rule 6 (top_level_statement)


State 13

    8 top_level_statement: IDENTIFIER ASSIGN • IMPORT LPAREN STRING_LITERAL RPAREN
   10                    | IDENTIFIER ASSIGN • MODULE LPAREN STRING_LITERAL RPAREN
   17 function_definition: IDENTIFIER ASSIGN • expression
   18                    | IDENTIFIER ASSIGN • expression lambda_block
   27 flow_literal: • LBRACKET flow_elements RBRACKET
   28             | • generator_expression
   33 generator_expression: • LBRACKET IDENTIFIER ASSIGN expression RANGE expression COLON expression RBRACKET
   88 expression: • assignment_expression
   89 assignment_expression: • ternary_expression
   90 ternary_expression: • logical_or_expression
   91                   | • logical_or_expression QUESTION ternary_options
   94 logical_or_expression: • logical_and_expression
   95                      | • logical_or_expression OR logical_and_expression
   96 logical_and_expression: • bitwise_or_expression
   97                       | • logical_and_expression AND bitwise_or_expression
   98 bitwise_or_expression: • bitwise_xor_expression
   99                      | • bitwise_or_expression OR bitwise_xor_expression
  100 bitwise_xor_expression: • bitwise_and_expression
  101                       | • bitwise_xor_expression XOR bitwise_and_expression
  102 bitwise_and_expression: • equality_expression
  103                       | • bitwise_and_expression AND equality_expression
  104 equality_expression: • relational_expression
  105                    | • equality_expression EQ relational_expression
  106                    | • equality_expression NEQ relational_expression
  107 relational_expression: • shift_expression
  108                      | • relational_expression LT shift_expression
  109                      | • relational_expression GT shift_expression
  110                      | • relational_expression LE shift_expression
  111                      | • relational_expression GE shift_expression
  112 shift_expression: • additive_expression
  113                 | • shift_expression LSHIFT additive_expression
  114                 | • shift_expression RSHIFT additive_expression
  115 additive_expression: • multiplicative_expression
  116                    | • additive_expression PLUS multiplicative_expression
  117                    | • additive_expression MINUS multiplicative_expression
  118 multiplicative_expression: • unary_expression
  119                          | • multiplicative_expression MUL unary_expression
  120                          | • multiplicative_expression DIV unary_expression
  121                          | • multiplicative_expression MOD unary_expression
  122 unary_expression: • postfix_expression
  123                 | • NOT unary_expression
  124                 | • MINUS unary_expression
  125                 | • MEMORY_OP LPAREN expression RPAREN
  126                 | • MEMORY_OP LPAREN expression COMMA expression RPAREN
  127 postfix_expression: • primary_expression
  128                   | • postfix_expression LPAREN argument_list RPAREN
  129                   | • postfix_expression LPAREN RPAREN
  130                   | • postfix_expression DOT IDENTIFIER
  131                   | • postfix_expression NAMESPACE_DOT IDENTIFIER
  132                   | • postfix_expression NAMESPACE_DOT IDENTIFIER LPAREN argument_list RPAREN
  133                   | • postfix_expression NAMESPACE_DOT IDENTIFIER LPAREN RPAREN
  134                   | • postfix_expression LBRACKET expression RBRACKET
  135 primary_expression: • IDENTIFIER
  136                   | • NUMBER
  137                   | • TIME_LITERAL
  138                   | • TRIGGER
  139                   | • REST
  140                   | • DT
  141                   | • DUR
  142                   | • AGE
  143                   | • STRING_LITERAL
  144                   | • LPAREN expression RPAREN
  145                   | • flow_literal
  146                   | • FLOW LBRACE flow_members RBRACE
  147                   | • STOP
  148                   | • LBRACE block_body RBRACE

    IDENTIFIER      shift, and go to state 22
    NUMBER          shift, and go to state 23
    TIME_LITERAL    shift, and go to state 24
    STRING_LITERAL  shift, and go to state 25
    FLOW            shift, and go to state 26
    IMPORT          shift, and go to state 27
    MODULE          shift, and go to state 28
    DT              shift, and go to state 29
    DUR             shift, and go to state 30
    STOP            shift, and go to state 31
    AGE             shift, and go to state 32
    MEMORY_OP       shift, and go to state 33
    REST            shift, and go to state 34
    MINUS           shift, and go to state 35
    NOT             shift, and go to state 36
    TRIGGER         shift, and go to state 37
    LPAREN          shift, and go to state 38
    LBRACKET        shift, and go to state 39
    LBRACE          shift, and go to state 40

    flow_literal               go to state 41
    generator_expression       go to state 42
    expression                 go to state 43
    assignment_expression      go to state 44
    ternary_expression         go to state 45
    logical_or_expression      go to state 46
    logical_and_expression     go to state 47
    bitwise_or_expression      go to state 48
    bitwise_xor_expression     go to state 49
    bitwise_and_expression     go to state 50
    equality_expression        go to state 51
    relational_expression      go to state 52
    shift_expression           go to state 53
    additive_expression        go to state 54
    multiplicative_expression  go to state 55
    unary_expression           go to state 56
    postfix_expression         go to state 57
    primary_expression         go to state 58


State 14

   13 function_definition: IDENTIFIER LPAREN • parameter_list RPAREN ASSIGN expression
   14                    | IDENTIFIER LPAREN • RPAREN ASSIGN expression
   15                    | IDENTIFIER LPAREN • parameter_list RPAREN ASSIGN expression lambda_block
   16                    | IDENTIFIER LPAREN • RPAREN ASSIGN expression lambda_block
   82 parameter_list: • parameter_list COMMA parameter
   83               | • parameter
   84 parameter: • IDENTIFIER
   85          | • IDENTIFIER TRIGGER
   86          | • IDENTIFIER ASSIGN expression
   87          | • DT ASSIGN expression

    IDENTIFIER  shift, and go to state 59
    DT          shift, and go to state 60
    RPAREN      shift, and go to state 61

    parameter_list  go to state 62
    parameter       go to state 63


State 15

   19 flow_definition: FLOW IDENTIFIER • ASSIGN flow_literal
   20                | FLOW IDENTIFIER • LPAREN parameter_list RPAREN ASSIGN flow_literal
   21                | FLOW IDENTIFIER • ASSIGN LBRACE flow_members RBRACE
   22                | FLOW IDENTIFIER • LPAREN parameter_list RPAREN ASSIGN LBRACE flow_members RBRACE

    ASSIGN  shift, and go to state 64
    LPAREN  shift, and go to state 65


State 16

   35 process_block: PROCESS IDENTIFIER • COMMA DUR ASSIGN expression COLON LBRACE process_body_statements RBRACE
   36              | PROCESS IDENTIFIER • COLON LBRACE process_body_statements RBRACE

    COLON  shift, and go to state 66
    COMMA  shift, and go to state 67


State 17

   34 process_block: PROCESS COLON • LBRACE process_body_statements RBRACE

    LBRACE  shift, and go to state 68


State 18

    7 top_level_statement: IMPORT LPAREN • STRING_LITERAL RPAREN

    STRING_LITERAL  shift, and go to state 69


State 19

    9 top_level_statement: MODULE LPAREN • STRING_LITERAL RPAREN

    STRING_LITERAL  shift, and go to state 70


State 20

    0 $accept: program YYEOF •

    $default  accept


State 21

    3 top_level_statements: top_level_statements top_level_statement •

    $default  reduce using rule 3 (top_level_statements)


State 22

  135 primary_expression: IDENTIFIER •

    $default  reduce using rule 135 (primary_expression)


State 23

  136 primary_expression: NUMBER •

    $default  reduce using rule 136 (primary_expression)


State 24

  137 primary_expression: TIME_LITERAL •

    $default  reduce using rule 137 (primary_expression)


State 25

  143 primary_expression: STRING_LITERAL •

    $default  reduce using rule 143 (primary_expression)


State 26

  146 primary_expression: FLOW • LBRACE flow_members RBRACE

    LBRACE  shift, and go to state 71


State 27

    8 top_level_statement: IDENTIFIER ASSIGN IMPORT • LPAREN STRING_LITERAL RPAREN

    LPAREN  shift, and go to state 72


State 28

   10 top_level_statement: IDENTIFIER ASSIGN MODULE • LPAREN STRING_LITERAL RPAREN

    LPAREN  shift, and go to state 73


State 29

  140 primary_expression: DT •

    $default  reduce using rule 140 (primary_expression)


State 30

  141 primary_expression: DUR •

    $default  reduce using rule 141 (primary_expression)


State 31

  147 primary_expression: STOP •

    $default  reduce using rule 147 (primary_expression)


State 32

  142 primary_expression: AGE •

    $default  reduce using rule 142 (primary_expression)


State 33

  125 unary_expression: MEMORY_OP • LPAREN expression RPAREN
  126                 | MEMORY_OP • LPAREN expression COMMA expression RPAREN

    LPAREN  shift, and go to state 74


State 34

  139 primary_expression: REST •

    $default  reduce using rule 139 (primary_expression)


State 35

   27 flow_literal: • LBRACKET flow_elements RBRACKET
   28             | • generator_expression
   33 generator_expression: • LBRACKET IDENTIFIER ASSIGN expression RANGE expression COLON expression RBRACKET
  122 unary_expression: • postfix_expression
  123                 | • NOT unary_expression
  124                 | • MINUS unary_expression
  124                 | MINUS • unary_expression
  125                 | • MEMORY_OP LPAREN expression RPAREN
  126                 | • MEMORY_OP LPAREN expression COMMA expression RPAREN
  127 postfix_expression: • primary_expression
  128                   | • postfix_expression LPAREN argument_list RPAREN
  129                   | • postfix_expression LPAREN RPAREN
  130                   | • postfix_expression DOT IDENTIFIER
  131                   | • postfix_expression NAMESPACE_DOT IDENTIFIER
  132                   | • postfix_expression NAMESPACE_DOT IDENTIFIER LPAREN argument_list RPAREN
  133                   | • postfix_expression NAMESPACE_DOT IDENTIFIER LPAREN RPAREN
  134                   | • postfix_expression LBRACKET expression RBRACKET
  135 primary_expression: • IDENTIFIER
  136                   | • NUMBER
  137                   | • TIME_LITERAL
  138                   | • TRIGGER
  139                   | • REST
  140                   | • DT
  141                   | • DUR
  142                   | • AGE
  143                   | • STRING_LITERAL
  144                   | • LPAREN expression RPAREN
  145                   | • flow_literal
  146                   | • FLOW LBRACE flow_members RBRACE
  147                   | • STOP
  148                   | • LBRACE block_body RBRACE
